# data-cleaning-toolkit

./: .gitignore  AUDIT_CHECKLIST.md  BUILD_AND_TEST_SUMMARY.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.heroku  Dockerfile.prod  Dockerfile.secure  FINAL_VERIFICATION.txt  LICENSE  README.md  SECURITY.md  SECURITY_HEADERS.conf  benchmark_framework.py  benchmark_master.py  benchmark_openrefine_comparison.py  benchmark_pandas.py  benchmark_real_datasets.py  benchmark_toolkit.py  benchmark_visualise.py  build-wasm-secure.ps1  build-wasm-secure.sh  build-wasm-temp.bat  build-wasm.bat  build-wasm.ps1  build-wasm.sh  build.sh  comprehensive-playwright-test.js  comprehensive-test.sh  cross_browser_test.py  dockerfile  error-test.sh  integrity-test.sh  package-lock.json  package.json  playwright-test.js  playwright.config.js  pnpm-lock.yaml  railway.json  (+21 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/core/: cleaners.cpp  cleaners2.cpp  cleaners3.cpp  cluster_application.cpp  cluster_detection.cpp  clustering.cpp  column_type_detection.cpp  column_type_detection.h  deep_clean.cpp  deep_clean.h  find_replace.cpp  find_replace2.cpp  find_replace_engine.cpp  find_replace_rules.cpp  find_replace_substr.cpp  find_replace_substring.cpp  natural_sort.cpp  outlier_detectors.cpp  statistical_cleaners.cpp  string_issue_detectors.cpp  string_issue_detectors.h  structural_cleaners.cpp  structural_cleaners.h  weighted_dedup.cpp  weighted_dedup.h
backend/src/parsers/: csv_parser.cpp  csv_serializer.cpp
backend/src/platform/: alerts.cpp  analytics.cpp  analytics.h  audit.h  audit_logger.cpp  backup.cpp  backup.h  cache.cpp  cache.h  load_test.cpp  logger.cpp  rate_limiter.cpp  rate_limiter.h  seo.cpp  seo.h  time_safe.h
backend/src/routes/: cleaning_routes.cpp  detection_routes.cpp  routes.cpp  routes2.cpp  routes3.cpp  static_file_routes.cpp  text_routes.cpp
backend/src/text/: text_domain_cleaners.cpp  text_normalisation.cpp  text_normalisation.h  text_utils2.cpp
benchmark_results/: openrefine-comparison.md  pandas_benchmark_results.json  real_dataset_benchmark_results.csv  real_dataset_benchmark_results.json  reproducibility_validation_results.json  toolkit_benchmark_results.json  visualization-guide.md
benchmarks/: BENCHMARK_DATASETS.txt  dataset-fairness-analysis.csv  dataset1-customers.csv  dataset2-sales.csv  dataset3-inventory.csv
datasets/Credit/outliers/: clean_HC_impute_holoclean_test.csv  clean_HC_impute_holoclean_train.csv  clean_IQR_impute_mean_dummy_test.csv  clean_IQR_impute_mode_dummy_test.csv  clean_SD_delete_test.csv  clean_SD_delete_train.csv  clean_SD_impute_mean_dummy_test.csv  clean_SD_impute_mean_dummy_train.csv  clean_SD_impute_median_dummy_test.csv  clean_SD_impute_median_dummy_train.csv  clean_SD_impute_mode_dummy_test.csv  clean_SD_impute_mode_dummy_train.csv  dirty_test.csv  dirty_train.csv  indicator_clean_HC_impute_holoclean_test.csv  indicator_clean_HC_impute_holoclean_train.csv  indicator_clean_IQR_impute_mean_dummy_test.csv  indicator_clean_IQR_impute_mode_dummy_train.csv  indicator_clean_SD_delete_test.csv  indicator_clean_SD_delete_train.csv  version.json
datasets/Credit/raw/: dirty_test.csv  idx_test.csv  idx_train.csv
datasets/Titanic/missing_values/: delete_test.csv  delete_train.csv  impute_holoclean_test.csv  impute_holoclean_train.csv  impute_mean_dummy_test.csv  impute_mean_dummy_train.csv  impute_mean_mode_test.csv  impute_mean_mode_train.csv  impute_median_dummy_test.csv  impute_median_dummy_train.csv  impute_median_mode_test.csv  impute_median_mode_train.csv  impute_mode_dummy_test.csv  impute_mode_dummy_train.csv  impute_mode_mode_test.csv  impute_mode_mode_train.csv  indicator_delete_train.csv  indicator_impute_mode_dummy_test.csv  version.json
datasets/Titanic/raw/: Holoclean_mv_clean.csv  dirty_test.csv  idx_test.csv  idx_train.csv  raw.csv
frontend/: algorithms.js  algorithms.wasm  app-seo.html  features.html  home.html  honours-project.html  index.html  manifest.json  offline.html  privacy.html  robots.txt  service-worker.js  sitemap.xml  terms.html  test-processors.html
frontend/css/: site.css  tokens.css
frontend/js/: cleaning.js  file-ops.js  game.js  init.js  interactive.js  json-processor.js  register-sw.js  service-worker.js  table.js  text-processor.js  ui.js  utils.js  workflow.js  xml-processor.js
frontend/samples/: airbnb-sample.json  credit-sample.xml  messy.json
include/: alerts.h  algorithms.h  audit_logger.h  cleaners.h  clustering.h  csv_parser.h  csv_serializer.h  database.h  detectors.h  documentation.h  find_replace.h  load_test.h  logger.h  pdf_report.h  text_utils.h
src/: alerts.cpp  algorithms-wasm.cpp  algorithms.cpp  audit.cpp  audit_logger.cpp  basic_detectors.cpp  cache.cpp  cleaners.cpp  cleaners2.cpp  clustering.cpp  clustering2.cpp  column_detect.cpp  csv_parser.cpp  csv_parser_rfc4180.cpp  csv_serializer.cpp  database.cpp  detectors.cpp  detectors2.cpp  documentation.cpp  fuzzy_match.cpp  json_parser_extraction.cpp  json_parser_flattening.cpp  json_parser_null_handler.cpp  json_parser_tokenizer.cpp  load_test.cpp  logger.cpp  main.cpp  outlier_detect.cpp  parser_errors.h  parser_state.h  pdf_report.cpp  rate_limiter.cpp  routes.cpp  routes2.cpp  routes3.cpp  routes_frontend.cpp  secure_algorithms.cpp  secure_algorithms.h  string_similarity.cpp  text_errors.h  (+15 more)
test-data/: test-basic.csv  test-missing.csv  test-nulls.csv  test-whitespace.csv
tests/: CMakeLists.txt  column_type_detection_test.cpp  combined_pipeline_test.cpp  json_parser_test.cpp  normalise_whitespace_regression_test.cpp  per_type_transforms_test.cpp  semi_structured_integration_test.cpp  test_csv_rfc4180.cpp  text_processor_test.cpp  unstructured_integration_test.cpp  weighted_dedup_test.cpp
wiki/: API-Reference.md  Algorithms.md  FAQ.md  Getting-Started.md  Home.md  Installation.md  Troubleshooting.md  Usage-Guide.md
(+9 files in other folders)
