cmake_minimum_required(VERSION 3.10)
project(DataCleaningToolkit)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fstack-protector-strong")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_FORTIFY_SOURCE=2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wformat -Wformat-security")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIE")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pie")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-z,noexecstack -Wl,-z,relro,-z,now")
add_definitions(-DASIO_STANDALONE)
include_directories(include)
include_directories(vcpkg/installed/x64-windows/include)
set(SOURCES src/main.cpp src/algorithms.cpp)
add_executable(Toolkit ${SOURCES})
if(WIN32)
    target_link_libraries(Toolkit PRIVATE ws2_32 wsock32)
endif()
if(UNIX AND NOT APPLE)
    target_link_libraries(Toolkit PRIVATE pthread)
endif()
option(BUILD_TESTS "Build tests" OFF)
if(BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()